--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "history": "2.0.0-rc2",
     "isomorphic-style-loader": "0.0.8",
     "jade": "1.11.0",
+    "jquery": "^2.2.0",
     "node-fetch": "1.3.3",
     "normalize.css": "3.0.3",
     "react": "0.14.7",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "0.14.7",
     "react-routing": "0.0.7",
     "source-map-support": "0.4.0",
